sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
09/20/2025:
[+] Added Unmonitored Google

09/18/2025:
[+] Fixed Tomb of the Mask (Thanks for the bug report Buena)
[+] Fixed Basketball Legends 2020. (Thanks for the bug report Buena)
[-] Removed Basketball Stars 2019. (Might re-add later if people care too
much)

09/17/2025:
[+] Added Pokémon Red, Blue, and Yellow (Thanks for the suggestion!)
[+] Added Basketbros (Thanks for the suggestion Griffin!)
[+] Added Whack Your Ex (Thanks for the suggestion!)
[+] Added Grand Theft Auto Advanced
[+] Fixed 1 on 1 Basketball
[+] Added an update popup to tell you when an update happens

09/16/2025:
[+] Added the survey annoucement. (if you haven't already, please take the
survey, it really does help) This is only temporary and will be removed once
enough responses are collected.

09/13/2025:
[+] Added Ragdoll Archers (Thanks for the suggestion Kaden!)
[+] Re-added There is No Game
[+] Fixed the Soccer Random image being Snailbob 5.
[+] Emulated Games are here! Please don't sue me!
[+] Added Super Mario 64 [N64]
[+] Added Mario Kart 64 [N64]
[+] Added Doom 64 [N64]
[+] Added Super Smash Bros [N64]
[+] Added Pokemon Stadium [N64]
[+] Added Street Fighter II Turbo [SNES]
[+] Added Welcome to Animal Crossing: Wild World [NDS]
[+] Added Lego Star Wars: The Video Game [GBA]
[!] Please suggest any emulated games you'd like to see next on the
suggestions form! Suggestions are greatly appreciated :)

09/12/2025:
[+] Added Funny Shooter 2 (Thanks for the suggestion!)

09/10/2025:
[!] Sorry for all the broken games. A lot of the games broke during the time
I was gone. I have fixed most of them though.
[+] Fixed Duck Life 1-4
[+] Fixed Ace Gangster Taxi
[+] Fixed Bad Ice Cream