@@ -1,3 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<Module>
+<ModulePrefs title="getaway"/>
+<Content type="html"><![CDATA[
 <!DOCTYPE html>
 <html>
 
@@ -41,3 +45,5 @@
 </body>
 
 </html>
+]]></Content>
+</Module>
